test_regress/t/t_alias_var_bad.out
%Error: t/t_alias_var_bad.v:18:9: Only nets are allowed in alias: 'a'
                                : ... note: In instance 't'
   18 |   alias a = b;
      |         ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_alias_var_bad.v:18:13: Only nets are allowed in alias: 'b'
                                 : ... note: In instance 't'
   18 |   alias a = b;
      |             ^
%Error: Exiting due to
